# grok-build-agent

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  THREAT_MODEL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  release.yml
apps/desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
apps/desktop/scripts/: cache-hit-gate.mjs  cache-hit-gate.test.mjs  macos-release-preflight.mjs  prepare-sidecar.mjs  release-safety-check.mjs
apps/desktop/src/: App.css  App.tsx  main.tsx  queryClient.ts  store.composer.test.ts  store.ts  types.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/src/: acp.rs  agent_host.rs  attachments.rs  blob_store.rs  cli_bridge.rs  config.rs  db.rs  e2e_mock.rs  git_ops.rs  host_client.rs  host_rpc.rs  launch_agent.rs  lib.rs  main.rs  platform.rs  policy.rs  runtime.rs  runtime_adapter.rs  secrets.rs  workspace_ops.rs
apps/desktop/src-tauri/src/acp/: connection.rs  events.rs  fs_guard.rs  handlers.rs  mod.rs  pool.rs  terminal_host.rs
apps/desktop/src-tauri/src/contracts/: mod.rs
apps/desktop/src-tauri/tests/fixtures/: mock_acp_agent.py
apps/desktop/src/acp/: client.test.ts  client.ts
apps/desktop/src/api/: catalog.ts
apps/desktop/src/assets/: README.md
apps/desktop/src/contracts/: commands.ts  composer.test.ts  composer.ts  desktop.ts  events.test.ts  events.ts  index.ts  mcp.ts  mode.ts  model.test.ts  (+15 more)
docs/: acp-mapping.md  architecture.md  baseline-env.md  contracts.md  harness.md  product-parity-hermes.md  release.md
harness/: AGENTS.md  plugin.json
harness/agents/: orchestrator.md
harness/personas/: implementer.toml  researcher.toml  reviewer.toml
harness/roles/: implementer.toml  reviewer.toml
harness/skills/orchestrate/: SKILL.md
harness/skills/review-loop/: SKILL.md
harness/skills/ship/: SKILL.md
harness/skills/verify/: SKILL.md
scripts/: build-macos.sh  soak-agent-host.sh  verify-macos-release.sh  verify-v1-release-candidate.sh
(+51 files in other folders)
